# FlumeControl

./: .copier-answers.yml  .coveragerc  .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  GUI.py  LICENSE  README.md  first_time_setup.ps1  flumecontrol.py  pyproject.toml  pyrightconfig.json  renovate.json  requirements.txt  requirements_dev.txt  requirements_lint.txt  setup.py  update.ps1
.github/: dependabot.yml
.github/workflows/: changerelease.yml  codeql-analysis.yml  main.yml  publish.yml  sphinx.yml
.tools/: pyproject.toml
.tools/requirements/: requirements_dev.txt
docs/: conf.py
examples/: boilerdaq_pid.py  boilerdaq_plot.py
src/flumecontrol/: __init__.py
tests/: test_flumecontrol.py
